Fix: Fix spacing too big after core library upgrade

--- a/src/scss/_style.scss
+++ b/src/scss/_style.scss
@@ -123,6 +123,7 @@
     flex-shrink: 0;
     align-items: baseline;
     max-width: none;
+    margin-top: 0;
 }
 
 @media screen and (max-width: settings.$breakpoint-desktop-down) {
